--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,51 @@
+alembic==0.8.9
 aniso8601==1.2.0
+appnope==0.1.0
+backports.shutil-get-terminal-size==1.0.0
 cffi==1.9.1
 click==6.6
 cryptography==1.6
+decorator==4.0.10
 enum34==1.1.6
 Flask==0.11.1
 Flask-Ask==0.8.2
+Flask-Migrate==2.0.1
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.1
 idna==2.1
 ipaddress==1.0.17
+ipdb==0.10.1
+ipython==5.1.0
+ipython-genutils==0.1.0
 itsdangerous==0.24
 Jinja2==2.8
+jsonify==0.5
+Mako==1.0.6
 MarkupSafe==0.23
+oauthlib==2.0.1
+pathlib2==2.1.0
+pbr==1.10.0
+pexpect==4.2.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.9
+ptyprocess==0.5.1
 pyasn1==0.1.9
 pycparser==2.17
+Pygments==2.1.3
 pyOpenSSL==16.2.0
 python-dateutil==2.6.0
+python-editor==1.0.3
 PyYAML==3.12
+requests==2.12.3
+requests-oauthlib==0.7.0
+simplegeneric==0.8.1
 six==1.10.0
+SQLAlchemy==1.1.4
+sqlalchemy-migrate==0.10.0
+sqlparse==0.2.2
+Tempita==0.5.2
+traitlets==4.3.1
+tweepy==3.5.0
 Unidecode==0.4.19
+wcwidth==0.1.7
 Werkzeug==0.11.11
